cmake_minimum_required(VERSION 3.10)
project(coro_utils)

set(CMAKE_CXX_STANDARD 20)
find_package(Boost REQUIRED COMPONENTS system)
include_directories(${Boost_INCLUDE_DIRS})
add_library(asd asd.cpp)
target_link_libraries(asd ${Boost_LIBRARIES})
add_executable(qwe qwe.cpp)
target_link_libraries(qwe asd)